# jp-mesh-processing

./: CHANGELOG.md  LICENSE  README.md  main.py  mesh_analysis.py  mesh_exceptions.py  mesh_load.py  mesh_sdf.py  mesh_simplification.py  mesh_visualizer.py  requirements.txt  setup.cfg  setup.py  utils.py
src/mesh_processing/: __init__.py  logging_config.py  mesh_analysis.py  mesh_load.py  mesh_sdf.py  mesh_simplification.py  mesh_visualizer.py
tests/: test_mesh_processing.py
